--- a/Unkown.exe/Unity.ShaderGraph.Editor.csproj
+++ b/Unkown.exe/Unity.ShaderGraph.Editor.csproj
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
-    <LangVersion>8.0</LangVersion>
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -53,9 +53,6 @@
     <UnityVersion>2020.3.24f1</UnityVersion>
   </PropertyGroup>
   <ItemGroup>
-    <Analyzer Include="C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\Common7\IDE\Extensions\Microsoft\Visual Studio Tools for Unity\Analyzers\Microsoft.Unity.Analyzers.dll" />
-  </ItemGroup>
-  <ItemGroup>
     <Compile Include="Library\PackageCache\com.unity.shadergraph@10.7.0\Editor\Data\Nodes\Math\Advanced\LengthNode.cs" />
     <Compile Include="Library\PackageCache\com.unity.shadergraph@10.7.0\Editor\Data\Nodes\Input\Texture\SampleTexture2DNode.cs" />
     <Compile Include="Library\PackageCache\com.unity.shadergraph@10.7.0\Editor\Data\Graphs\Matrix2ShaderProperty.cs" />
@@ -92,8 +89,8 @@
     <Compile Include="Library\PackageCache\com.unity.shadergraph@10.7.0\Editor\Data\Nodes\Artistic\Normal\NormalFromHeightNode.cs" />
     <Compile Include="Library\PackageCache\com.unity.shadergraph@10.7.0\Editor\Data\Implementation\IHasDependencies.cs" />
     <Compile Include="Library\PackageCache\com.unity.shadergraph@10.7.0\Editor\Generation\Processors\PropertyCollector.cs" />
-    <Compile Include="Library\PackageCache\com.unity.shadergraph@10.7.0\Editor\Generation\Enumerations\KeywordDefinition.cs" />
     <Compile Include="Library\PackageCache\com.unity.shadergraph@10.7.0\Editor\Data\Nodes\Input\Texture\SampleTexture2DArrayNode.cs" />
+    <Compile Include="Library\PackageCache\com.unity.shadergraph@10.7.0\Editor\Generation\Enumerations\KeywordDefinition.cs" />
     <Compile Include="Library\PackageCache\com.unity.shadergraph@10.7.0\Editor\Data\Nodes\IPropertyFromNode.cs" />
     <Compile Include="Library\PackageCache\com.unity.shadergraph@10.7.0\Editor\Generation\Descriptors\SubShaderDescriptor.cs" />
     <Compile Include="Library\PackageCache\com.unity.shadergraph@10.7.0\Editor\Data\Nodes\Utility\SubGraphNode.cs" />
@@ -535,8 +532,8 @@
     <Compile Include="Library\PackageCache\com.unity.shadergraph@10.7.0\Editor\Drawing\Colors\NoColors.cs" />
     <Compile Include="Library\PackageCache\com.unity.shadergraph@10.7.0\Editor\Drawing\Colors\ColorManager.cs" />
     <Compile Include="Library\PackageCache\com.unity.shadergraph@10.7.0\Editor\Data\Attributes\BuiltinKeywordAttribute.cs" />
-    <Compile Include="Library\PackageCache\com.unity.shadergraph@10.7.0\Editor\Data\Nodes\Utility\Logic\NotNode.cs" />
     <Compile Include="Library\PackageCache\com.unity.shadergraph@10.7.0\Editor\Generation\Collections\StructCollection.cs" />
+    <Compile Include="Library\PackageCache\com.unity.shadergraph@10.7.0\Editor\Data\Nodes\Utility\Logic\NotNode.cs" />
     <Compile Include="Library\PackageCache\com.unity.shadergraph@10.7.0\Editor\Data\Graphs\Texture3DInputMaterialSlot.cs" />
     <Compile Include="Library\PackageCache\com.unity.shadergraph@10.7.0\Editor\Data\SubGraph\SubGraphOutputNode.cs" />
     <Compile Include="Library\PackageCache\com.unity.shadergraph@10.7.0\Editor\Data\Interfaces\IMayRequireVertexID.cs" />
